Move forward with UI, change spacing, fix main baner

--- a/styles.css
+++ b/styles.css
@@ -114,9 +114,14 @@ h6 {
   src: url(./src/Permanent_Marker/PermanentMarker-Regular.ttf);
 }
 
+@font-face {
+  font-family: "base-font";
+  src: url(./src/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
 body {
   background-color: var(--color-bg);
   font-size: var(--fs-base);
+  font-family: "base-font", Arial, Helvetica, sans-serif;
 }
 
 .main-page {
@@ -125,6 +130,7 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .border-angled {
@@ -154,12 +160,12 @@ body {
 }
 
 .logo {
-  font-family: "logo-font";
+  font-family: "base-font";
   width: 24rem;
   display: flex;
   justify-content: center;
   font-size: var(--fs-3xl);
-  font-weight: 200;
+  font-weight: 700;
   color: var(--color-secondary);
 }
 
@@ -169,11 +175,12 @@ body {
 
 .page-content {
   width: 100vw;
-  height: 100%;
+  flex: 1;
+  overflow: auto;
   background-color: var(--color-surface);
   display: grid;
   grid-template-columns: 2fr 1fr 1fr 1fr;
-  grid-template-rows: minmax(0, 1fr) minmax(0, 4fr);
+  grid-template-rows: minmax(0, 1fr) minmax(0, 5fr);
   gap: var(--space-3);
   padding: var(--space-3);
 }
@@ -186,9 +193,8 @@ body {
     rgb(255, 104, 187) 70%
   );
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .search-section {
@@ -210,7 +216,7 @@ body {
   );
 
   display: grid;
-  gap: var(--space-2);
+  gap: var(--space-3);
   grid-template-rows: 5fr 2fr;
   grid-template-columns: 4fr 1fr;
 }
@@ -224,11 +230,11 @@ body {
   grid-area: 2/4/2/4;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: var(--space-2);
 }
 
 #weather-form {
-  min-width: 80%;
+  min-width: 70%;
 }
 
 .search-bar {
@@ -236,8 +242,6 @@ body {
   padding: var(--space-1);
   background-color: var(--color-bg);
   font-size: var(--fs-xl);
-  justify-content: space-between;
-  margin: 1rem 8rem;
 }
 
 input {
@@ -260,7 +264,7 @@ input:focus::placeholder {
   background-color: var(--color-bg);
   transition: all 0.3s;
   border-radius: 8px;
-  padding: var(--space-1) var(--space-3);
+  padding: var(--space-1) var(--space-2);
   margin-right: var(--space-1);
 }
 
@@ -290,14 +294,15 @@ input:focus::placeholder {
 }
 
 .homeIcon {
-  width: 2.75rem;
+  height: var(--fs-2xl);
   opacity: 0.7;
+  margin-left: 0.75rem;
 }
 
 .flex-container-home {
   display: flex;
-  width: 60%;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: baseline;
 }
 
 .change-current-city-btn {
@@ -305,9 +310,9 @@ input:focus::placeholder {
   background-color: rgba(236, 236, 236, 0.274);
   transition: all 0.3s;
   border-radius: 8px;
-  width: 70%;
   padding: var(--space-1) var(--space-2);
-  font-size: var(--fs-lg);
+  font-size: var(--fs-xl);
+
   color: var(--color-text-muted);
   cursor: pointer;
 }
@@ -318,26 +323,34 @@ input:focus::placeholder {
 
 .main-weather-card {
   display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .main-weather-card-info-container {
   display: flex;
   flex-direction: column;
-  margin: 0 0 0 var(--space-3);
-  padding: var(--space-2) var(--space-5);
+
   font-size: var(--fs-2xl);
+  gap: var(--fs-base);
 }
 .card-title {
   font-size: var(--fs-3xl);
+  font-weight: 500;
 }
 
 .main-weather-temp {
   font-size: var(--fs-3xl);
-  margin-left: var(--space-2);
 }
 
-.main-weather-card-info {
-  padding-left: var(--space-4);
+.flex-container-weather {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-weather-icon {
+  height: clamp(150px, 20vw, 400px);
 }
 
 .daily-weather-card {
